@@ -150,14 +150,16 @@ module ActiveScaffold::Actions
         
     # Builds search conditions by search params for column names. This allows urls like "contacts/list?company_id=5".
     def conditions_from_params
-      conditions = {}
-      params.reject {|key, value| [:controller, :action, :id, :page, :sort, :sort_direction].include?(key.to_sym)}.each do |key, value|
-        next unless active_scaffold_config.model.columns_hash[key.to_s]
-        next if active_scaffold_constraints[key.to_sym]
-        next if nested? and nested.constrained_fields.include? key.to_sym
-        conditions[key] = value
+      @conditions_from_params ||= begin
+        conditions = {}
+        params.reject {|key, value| [:controller, :action, :id, :page, :sort, :sort_direction].include?(key.to_sym)}.each do |key, value|
+          next unless active_scaffold_config.model.columns_hash[key.to_s]
+          next if active_scaffold_constraints[key.to_sym]
+          next if nested? and nested.constrained_fields.include? key.to_sym
+          conditions[key.to_sym] = value
+        end
+        conditions
       end
-      conditions
     end
 
     def new_model
